--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
         </div>
         <div class="travel-input">
             <input type="text" name="" id="" placeholder="Where go">
+            <select name="" id="">
+                <option value="">When</option>
+            </select>
+            <select name="" id="">
+                <option value="">Select Type</option>
+            </select>
+            <button class="btn-primary"><i class="fa-solid fa-magnifying-glass"></i>Find Now</button>
         </div>
     </section>
 </body>
